feat: add register page
add page and functionality for registering a user

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,5 +1,9 @@
+@import '~bootstrap/scss/bootstrap.scss';
+
 @import 'mixins';
 
 @import 'components';
+
+@import 'utilities';
 
 @import '~bootstrap/scss/bootstrap.scss';
