feat: add user list
add user list component + fetching

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1,3 +1,5 @@
 @import 'components/loader';
 @import 'components/layout';
 @import 'components/route';
+@import 'components/tables';
+@import 'components/avatars';
