--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -6,7 +6,8 @@
     left: 0;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
+    max-width: 100vw;
     z-index: 9999;
     background-color: white;
     opacity: 1;
